[package]
name = "qfs_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
reqwest = { version = "0.12.14", features = ["json", "stream"] }
indicatif = "0.17.11"
tokio = { version = "1.44.1", features = ["full"] }
colored = "3.0.0"
serde = { version="1.0.219", features=["serde_derive"] }
serde_json = "1.0.140"
chksum-md5 = "0.1.0"
futures-util = "0.3.31"
bytes = "1.10.1"
urlencoding = "2.1.3"
path-slash = "0.2.1"
